--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  firebase_storage: ^11.7.6
+  firebase_auth: ^4.19.6
+  fluttertoast: ^8.2.5
+  cloud_firestore: ^4.17.4
+  firebase_core:
 dev_dependencies:
   flutter_test:
     sdk: flutter
